--- a/src/views/home/index.less
+++ b/src/views/home/index.less
@@ -1,12 +1,12 @@
 .container {
   width: 100%;
   height: 100%;
-  box-sizing: border-box;
+  // box-sizing: border-box;
   background: url(../../assets/imgs/bg.jpg) no-repeat top center;
   color: #fff;
 
   .boxContainer {
-    overflow-y: auto;
+    // overflow-y: auto;
     width: 100%;
     height: 100%;
     display: flex;
