--- a/src/views/home/index.less
+++ b/src/views/home/index.less
@@ -5,6 +5,14 @@
   background: url(../../assets/imgs/bg.jpg) no-repeat top center;
   color: #fff;
 
+  .infoBox {
+    width: 100px;
+    height: 100px;
+    position: fixed;
+    top: 50%;
+    right: 0;
+    transform: translate(0, -50%);
+  }
   .boxContainer {
     // overflow-y: auto;
     width: 100%;
@@ -97,9 +105,9 @@
         padding: 0 !important;
       }
 
-      .middlebox1 {
-        // width: 100%;
-      }
+      // .middlebox1 {
+
+      // }
       .middlebox2 {
         margin-top: 10px;
         // width: 100%;
